fix: api error flow and ranking ordering